backend/root/records/4/compile_err.txt
/home/ycdfwzy/github/2018SE_THSSOJ/backend/root/records/4/4.code:1:1: error: stray ‘\’ in program
 \x
 ^
/home/ycdfwzy/github/2018SE_THSSOJ/backend/root/records/4/4.code:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
